--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -5,3 +5,18 @@
     defaultBranch = main
 [pull]
     ff = only
+
+[url "https://github.com/"]
+    insteadOf = gh:
+[url "ssh://git@github.com:"]
+    pushInsteadOf = gh:
+
+[url "https://gitlab.com/"]
+    insteadOf = gl:
+[url "ssh://git@gitlab.com:"]
+    pushInsteadOf = gl:
+
+[url "https://invent.kde.org/"]
+    insteadOf = kde:
+[url "ssh://git@invent.kde.org:"]
+    pushInsteadOf = kde:
