--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -5,6 +5,9 @@
     defaultBranch = main
 [pull]
     ff = only
+[merge]
+    tool = nvimdiff2
+    guitool = kdiff3   pushInsteadOf = kde:
 
 [url "https://github.com/"]
     insteadOf = gh:
@@ -19,4 +22,3 @@
 [url "https://invent.kde.org/"]
     insteadOf = kde:
 [url "ssh://git@invent.kde.org:"]
-    pushInsteadOf = kde:
