--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -21,6 +21,7 @@
     # tool = nvimdiff2 # doesn't support dp (:diffput)
     tool = nvim-fugitive
     guitool = kdiff3   pushInsteadOf = kde:
+    conflictstyle = diff3
 
 [url "https://github.com/"]
     insteadOf = gh:
