--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -3,7 +3,7 @@
     name = {{ .name }}
 
 [core]
-    pager = diff-so-fancy | less --tabs=4 -RFXS --pattern '^(Date|added|deleted|modified): '
+    pager = diff-so-fancy | less --tabs=4 -RFXS
 [interactive]
     diffFilter = diff-so-fancy --patch
 [alias]
