--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -1938,6 +1938,12 @@ map kitty_mod+, move_tab_backward
 map kitty_mod+alt+t set_tab_title
 map shift+cmd+i     set_tab_title
 
+#: Moves the window into a new tab
+map kitty_mod+f3 detach_window new-tab
+
+#: Asks which tab to move the window into
+map kitty_mod+f4 detach_window ask
+
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
