--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -1508,7 +1508,7 @@ macos_colorspace srgb
 #: windows.
 
 # maximize on wayland (at least on plasma) is broken
-linux_display_server x11
+linux_display_server auto
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
