--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -1404,7 +1404,7 @@ term xterm-kitty
 
 #: OS specific tweaks {{ "{{{" }}
 
-wayland_titlebar_color system
+wayland_titlebar_color background
 
 #: The color of the kitty window's titlebar on Wayland systems with
 #: client side window decorations such as GNOME. A value of system
@@ -1507,7 +1507,7 @@ macos_colorspace srgb
 #: configuration will change this value only for newly created OS
 #: windows.
 
-linux_display_server auto
+linux_display_server x11
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
