--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -1143,7 +1143,7 @@ shell fish
 #: --login and --interactive to ensure that the shell starts in
 #: interactive mode and reads its startup rc files.
 
-editor .
+editor nvim
 
 #: The terminal based text editor (such as vim or nano) to use when
 #: editing the kitty config file or similar tasks.
