Update .chezmoi.toml Update .config/git/config Update .config/nvim/filetype.lua Update .config/nvim/init.lua Add .config/nvim/lazy-lock.json Remove .config/nvim/lua/config/colorscheme.lua Update .config/nvim/lua/config/keybindings.lua Update .config/nvim/lua/config/options.lua Remove .config/nvim/lua/config/plugin/cmp.lua Remove .config/nvim/lua/config/plugin/lualine.lua Update .config/nvim/lua/config/plugin/mason_lspconfig.lua Update .config/nvim/lua/config/plugin/treesitter.lua Remove .config/nvim/lua/plugins.lua Add .config/nvim/lua/plugins/cmp.lua Add .config/nvim/lua/plugins/colorscheme.lua Add .config/nvim/lua/plugins/init.lua Add .config/nvim/lua/plugins/lsp/init.lua Add .config/nvim/lua/plugins/lualine.lua Add .config/nvim/lua/plugins/telescope.lua Add .config/nvim/lua/plugins/treesitter.lua Add .config/nvim/lua/plugins/ui.lua Remove .config/nvim/queries/lua/injections.scm

--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -2,12 +2,26 @@
     email = {{ .email }}
     name = {{ .name }}
 
-[core]
-    pager = diff-so-fancy | less --tabs=4 -RFXS
-[interactive]
-    diffFilter = diff-so-fancy --patch
-[alias]
-    patch = !git --no-pager diff --no-color
+# [diff]
+#     external = "difft"
+
+# diff-so-fancy
+# [core]
+#     pager = diff-so-fancy | less --tabs=4 -RFXS
+# [interactive]
+#     diffFilter = diff-so-fancy --patch
+# [alias]
+#     patch = !git --no-pager diff --no-color
+
+# difftastic
+# [diff]
+#     tool = difftastic
+# [difftool]
+#     prompt = false
+# [difftool "difftastic"]
+#     cmd = difft "$LOCAL" "$REMOTE"
+# [pager]
+#     difftool = true
 
 [init]
     defaultBranch = main
@@ -22,6 +36,10 @@
     tool = nvim-fugitive
     guitool = kdiff3   pushInsteadOf = kde:
     conflictstyle = diff3
+
+# git pull also updates submodules
+[submodule]
+    recurse = true
 
 [url "https://github.com/"]
     insteadOf = gh:
