--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -34,7 +34,7 @@
 [merge]
     # tool = nvimdiff2 # doesn't support dp (:diffput)
     tool = nvim-fugitive
-    guitool = kdiff3   pushInsteadOf = kde:
+    guitool = kdiff3
     conflictstyle = diff3
 
 # git pull also updates submodules
