--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -9,7 +9,7 @@
 [delta]
     navigate = true # n/N keybinds
     line-numbers = true
-    side-by-side = false
+    side-by-side = true
     file-modified-label = modified:
 
 [interactive]
@@ -54,3 +54,5 @@
     insteadOf = kde:
 [url "ssh://git@invent.kde.org:"]
     pushInsteadOf = kde:
+
+# vim: ft=gitconfig
