Update .chezmoi.toml Update .config/nvim/filetype.lua Update .config/nvim/lazy-lock.json

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -10,7 +10,7 @@ command = "nvim"
 args = ["-d", "{{ "{{" }} .Destination {{ "}}" }}", "{{ "{{" }} .Target {{ "}}" }}", "{{ "{{" }} .Source {{ "}}" }}"]
 
 [diff]
-pager = delta
+pager = "delta"
 # pager = "diff-so-fancy | less -x4 -RFXS --pattern '^(Date|added|deleted|modified): '"
 
 [data]
