Update .config/kitty/kitty.conf Update .config/nvim/lazy-lock.json Update .config/nvim/lua/config/diagnostic.lua Update .config/nvim/lua/config/keybindings.lua Update .config/nvim/lua/config/options.lua Update .config/nvim/lua/plugins/lsp/init.lua Update .config/nvim/lua/plugins/telescope.lua Update .config/nvim/lua/plugins/ui.lua

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -35,17 +35,16 @@ font_size {{ .kitty.font_size }}
 #: in an RTL script, the words "HELLO WORLD" display in kitty as
 #: "WORLD HELLO", and if you try to select a substring of an RTL-
 #: shaped string, you will get the character that would be there had
-#: the the string been LTR. For example, assuming the Hebrew word
-#: ירושלים, selecting the character that on the screen appears to be ם
-#: actually writes into the selection buffer the character י.  kitty's
-#: default behavior is useful in conjunction with a filter to reverse
-#: the word order, however, if you wish to manipulate RTL glyphs, it
-#: can be very challenging to work with, so this option is provided to
-#: turn it off. Furthermore, this option can be used with the command
-#: line program GNU FriBidi
-#: <https://github.com/fribidi/fribidi#executable> to get BIDI
-#: support, because it will force kitty to always treat the text as
-#: LTR, which FriBidi expects for terminals.
+#: the string been LTR. For example, assuming the Hebrew word ירושלים,
+#: selecting the character that on the screen appears to be ם actually
+#: writes into the selection buffer the character י. kitty's default
+#: behavior is useful in conjunction with a filter to reverse the word
+#: order, however, if you wish to manipulate RTL glyphs, it can be
+#: very challenging to work with, so this option is provided to turn
+#: it off. Furthermore, this option can be used with the command line
+#: program GNU FriBidi <https://github.com/fribidi/fribidi#executable>
+#: to get BIDI support, because it will force kitty to always treat
+#: the text as LTR, which FriBidi expects for terminals.
 
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D4,U+E200-U+E2A9,U+E300-U+E3EB,U+E5FA-U+E631,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32D,U+F400-U+F4A9,U+F500-U+FD46 Symbols Nerd Font
 
@@ -317,7 +316,7 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 #: set to 0 if there is no cursor, for example, when showing the last
 #: command output.
 
-# scrollback_pager_history_size 0
+scrollback_pager_history_size 100
 
 #: Separate scrollback history size (in MB), used only for browsing
 #: the scrollback buffer with pager. This separate buffer is not
@@ -890,8 +889,8 @@ enable_audio_bell no
 #: The list of characters for visual window selection. For example,
 #: for selecting a window to focus on with focus_visible_window. The
 #: value should be a series of unique numbers or alphabets, case
-#: insensitive, from the set [0-9A-Z]. Specify your preference as a
-#: string of characters.
+#: insensitive, from the set 0-9A-Z\-=[];',./\\`. Specify your
+#: preference as a string of characters.
 
 # confirm_os_window_close -1
 
@@ -1114,7 +1113,7 @@ tab_bar_style powerline
 #: and/or rendering artifacts. Usually, values up to 64 work well.
 #: Note that this might cause performance issues, depending on how the
 #: platform implements it, so use with care. Currently supported on
-#: macOS and KDE/X11.
+#: macOS and KDE under X11.
 
 # background_image none
 
@@ -1252,7 +1251,8 @@ shell fish
 #: whatever shell is set as the default shell for the current user.
 #: Note that on macOS if you change this, you might need to add
 #: --login and --interactive to ensure that the shell starts in
-#: interactive mode and reads its startup rc files.
+#: interactive mode and reads its startup rc files. Environment
+#: variables are expanded in this setting.
 
 editor nvim
 
@@ -1295,7 +1295,7 @@ close_on_child_death yes
 
 #: To get a list of available actions, run::
 
-#:     kitty @ --help
+#:     kitten @ --help
 
 #: A set of actions to be allowed when no password is sent can be
 #: specified by using an empty password. For example::
@@ -1343,19 +1343,20 @@ close_on_child_death yes
 
 # listen_on none
 
-#: Listen to the specified UNIX socket for remote control connections.
-#: Note that this will apply to all kitty instances. It can be
-#: overridden by the kitty --listen-on command line option, which also
-#: supports listening on a TCP socket. This option accepts only UNIX
-#: sockets, such as unix:${TEMP}/mykitty or unix:@mykitty (on Linux).
+#: Listen to the specified socket for remote control connections. Note
+#: that this will apply to all kitty instances. It can be overridden
+#: by the kitty --listen-on command line option. For UNIX sockets,
+#: such as unix:${TEMP}/mykitty or unix:@mykitty (on Linux).
 #: Environment variables are expanded and relative paths are resolved
 #: with respect to the temporary directory. If {kitty_pid} is present,
 #: then it is replaced by the PID of the kitty process, otherwise the
 #: PID of the kitty process is appended to the value, with a hyphen.
-#: See the help for kitty --listen-on for more details. Note that this
-#: will be ignored unless allow_remote_control is set to either: yes,
-#: socket or socket-only. Changing this option by reloading the config
-#: is not supported.
+#: For TCP sockets such as tcp:localhost:0 a random port is always
+#: used even if a non-zero port number is specified.  See the help for
+#: kitty --listen-on for more details. Note that this will be ignored
+#: unless allow_remote_control is set to either: yes, socket or
+#: socket-only. Changing this option by reloading the config is not
+#: supported.
 
 # env
 
@@ -1465,7 +1466,7 @@ update_check_interval 0
 #: disabled to turn off shell integration, completely. It is also
 #: possible to disable individual features, set to a space separated
 #: list of these values: no-rc, no-cursor, no-title, no-cwd, no-
-#: prompt-mark, no-complete. See Shell integration
+#: prompt-mark, no-complete, no-sudo. See Shell integration
 #: <https://sw.kovidgoyal.net/kitty/shell-integration/> for details.
 
 # allow_cloning ask
@@ -1498,7 +1499,7 @@ update_check_interval 0
 #:     KITTY_CLONE_SOURCE_PATH.
 
 #: This option must be a comma separated list of the above values.
-#: This only source the first valid one in the above order.
+#: Only the first valid match, in the order specified, is sourced.
 
 # term xterm-kitty
 
@@ -1512,6 +1513,16 @@ update_check_interval 0
 #: from key-presses, to colors, to various advanced features may not
 #: work. Changing this option by reloading the config will only affect
 #: newly created windows.
+
+# forward_stdio no
+
+#: Forward STDOUT and STDERR of the kitty process to child processes
+#: as file descriptors 3 and 4. This is useful for debugging as it
+#: allows child processes to print to kitty's STDOUT directly. For
+#: example, echo hello world >&3 in a shell will print to the parent
+#: kitty's STDOUT. When enabled, this also sets the
+#: KITTY_STDIO_FORWARDED=3 environment variable so child processes
+#: know about the forwarding.
 
 #: {{ "}}}" }}
 
@@ -2354,7 +2365,7 @@ map kitty_mod+f4 detach_window ask
 #::  Quoting.html> so you can use escapes like \e to send control
 #::  codes or \u21fb to send Unicode characters (or you can just input
 #::  the Unicode characters directly as UTF-8 text). You can use
-#::  `kitty +kitten show_key` to get the key escape codes you want to
+#::  `kitten show_key` to get the key escape codes you want to
 #::  emulate.
 
 #::  The first argument to send_text is the keyboard modes in which to
