--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -2121,6 +2121,7 @@ map kitty_mod+f3 detach_window new-tab
 map kitty_mod+f4 detach_window ask
 
 map f1 new_window_with_cwd
+map shift+f1 new_tab_with_cwd
 
 #: You can also create shortcuts to go to specific tabs, with 1 being
 #: the first tab, 2 the second tab and -1 being the previously active
