--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -258,14 +258,18 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 #: rendered with the background color of the cell. Note that if the
 #: program running in the terminal sets a cursor color, this takes
 #: precedence. Also, the cursor colors are modified if the cell
-#: background and foreground colors have very low contrast.
+#: background and foreground colors have very low contrast. Note that
+#: some themes set this value, so if you want to override it, place
+#: your value after the lines where the theme file is included.
 
 # cursor_text_color #111111
 
 #: The color of text under the cursor. If you want it rendered with
 #: the background color of the cell underneath instead, use the
-#: special keyword: background. Note that if cursor is set to none
-#: then this option is ignored.
+#: special keyword: `background`. Note that if cursor is set to none
+#: then this option is ignored. Note that some themes set this value,
+#: so if you want to override it, place your value after the lines
+#: where the theme file is included.
 
 # cursor_shape block
 
@@ -387,7 +391,7 @@ scrollback_pager_history_size 100
 
 # open_url_with default
 
-#: The program to open clicked URLs. The special value default with
+#: The program to open clicked URLs. The special value default will
 #: first look for any URL handlers defined via the open_actions
 #: <https://sw.kovidgoyal.net/kitty/open_actions/> facility and if non
 #: are found, it will use the Operating System's default URL handler
@@ -449,7 +453,7 @@ scrollback_pager_history_size 100
 #: programs, including websites open in your browser can read the
 #: contents of the system clipboard.
 
-# paste_actions quote-urls-at-prompt,confirm
+paste_actions quote-urls-at-prompt
 
 #: A comma separated list of actions to take when pasting text into
 #: the terminal. The supported paste actions are:
@@ -472,6 +476,8 @@ scrollback_pager_history_size 100
 #:     Run the filter_paste() function from the file paste-actions.py in
 #:     the kitty config directory on the pasted text. The text returned by the
 #:     function will be actually pasted.
+#: no-op:
+#:     Has no effect.
 
 # strip_trailing_spaces never
 
@@ -548,10 +554,10 @@ scrollback_pager_history_size 100
 #: to see mouse events. See the builtin actions below to get a sense
 #: of what is possible.
 
-#: If you want to unmap an action, map it to no_op. For example, to
+#: If you want to unmap a button, map it to nothing. For example, to
 #: disable opening of URLs with a plain click::
 
-#:     mouse_map left click ungrabbed no_op
+#:     mouse_map left click ungrabbed
 
 #: See all the mappable actions including mouse actions here
 #: <https://sw.kovidgoyal.net/kitty/actions/>.
@@ -625,8 +631,8 @@ scrollback_pager_history_size 100
 
 #::  Select from the clicked point to the end of the line. If you
 #::  would like to select the word at the point and then extend to the
-#::  rest of the line, change line_from_point to
-#::  word_and_line_from_point.
+#::  rest of the line, change `line_from_point` to
+#::  `word_and_line_from_point`.
 
 #: Extend the current selection
 
@@ -662,8 +668,8 @@ scrollback_pager_history_size 100
 
 #::  Select from the clicked point to the end of the line even when
 #::  grabbed. If you would like to select the word at the point and
-#::  then extend to the rest of the line, change line_from_point to
-#::  word_and_line_from_point.
+#::  then extend to the rest of the line, change `line_from_point` to
+#::  `word_and_line_from_point`.
 
 #: Extend the current selection even when grabbed
 
@@ -699,6 +705,7 @@ scrollback_pager_history_size 100
 #: responsiveness, but also increase CPU usage and might cause flicker
 #: in full screen programs that redraw the entire screen on each loop,
 #: because kitty is so fast that partial screen updates will be drawn.
+#: This setting is ignored when the input buffer is almost full.
 
 # sync_to_monitor yes
 
@@ -732,7 +739,7 @@ enable_audio_bell no
 # window_alert_on_bell yes
 
 #: Request window attention on bell. Makes the dock icon bounce on
-#: macOS or the taskbar flash on linux.
+#: macOS or the taskbar flash on Linux.
 
 # bell_on_tab "🔔 "
 
@@ -756,7 +763,7 @@ enable_audio_bell no
 #: Path to a sound file to play as the bell sound. If set to none, the
 #: system default bell sound is used. Must be in a format supported by
 #: the operating systems sound API, such as WAV or OGA on Linux
-#: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound)
+#: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound).
 
 # linux_bell_theme __custom
 
@@ -905,16 +912,17 @@ enable_audio_bell no
 
 # resize_debounce_time 0.1 0.5
 
-#: The time to wait before redrawing the screen during a live resize
-#: of the OS window, when no new resize events have been received,
-#: i.e. when resizing is either paused or finished. On platforms such
-#: as macOS, where the operating system sends events corresponding to
-#: the start and end of a live resize, the second number is used for
-#: redraw-after-pause since kitty can distinguish between a pause and
-#: end of resizing.  On such systems the first number is ignored and
-#: redraw is immediate after end of resize.  On other systems the
-#: first number is used so that kitty is "ready" quickly after the end
-#: of resizing, while not also continuously redrawing, to save energy.
+#: The time to wait (in seconds) before asking the program running in
+#: kitty to resize and redraw the screen during a live resize of the
+#: OS window, when no new resize events have been received, i.e. when
+#: resizing is either paused or finished. On platforms such as macOS,
+#: where the operating system sends events corresponding to the start
+#: and end of a live resize, the second number is used for redraw-
+#: after-pause since kitty can distinguish between a pause and end of
+#: resizing. On such systems the first number is ignored and redraw is
+#: immediate after end of resize. On other systems only the first
+#: number is used so that kitty is "ready" quickly after the end of
+#: resizing, while not also continuously redrawing, to save energy.
 
 # resize_in_steps no
 
@@ -1458,7 +1466,8 @@ update_check_interval 0
 #: documentation for details. Note that relative paths are interpreted
 #: with respect to the kitty config directory. Environment variables
 #: in the path are expanded. Changing this option by reloading the
-#: config is not supported.
+#: config is not supported. Note that if kitty is invoked with command
+#: line arguments specifying a command to run, this option is ignored.
 
 # clipboard_control write-clipboard write-primary read-clipboard-ask read-primary-ask
 
@@ -1541,6 +1550,56 @@ update_check_interval 0
 #: This option must be a comma separated list of the above values.
 #: Only the first valid match, in the order specified, is sourced.
 
+# notify_on_cmd_finish never
+
+#: Show a desktop notification when a long-running command finishes
+#: (needs shell_integration). The possible values are:
+
+#: never
+#:     Never send a notification.
+
+#: unfocused
+#:     Only send a notification when the window does not have keyboard focus.
+
+#: invisible
+#:     Only send a notification when the window both is unfocused and not visible
+#:     to the user, for example, because it is in an inactive tab or its OS window
+#:     is not currently active.
+
+#: always
+#:     Always send a notification, regardless of window state.
+
+#: There are two optional arguments:
+
+#: First, the minimum duration for what is considered a long running
+#: command. The default is 5 seconds. Specify a second argument to set
+#: the duration. For example: invisible 15. Do not set the value too
+#: small, otherwise a command that launches a new OS Window and exits
+#: will spam a notification.
+
+#: Second, the action to perform. The default is notify. The possible
+#: values are:
+
+#: notify
+#:     Send a desktop notification.
+
+#: bell
+#:     Ring the terminal bell.
+
+#: command
+#:     Run a custom command. All subsequent arguments are the cmdline to run.
+
+#: Some more examples::
+
+#:     # Send a notification when a command takes more than 5 seconds in an unfocused window
+#:     notify_on_cmd_finish unfocused
+#:     # Send a notification when a command takes more than 10 seconds in a invisible window
+#:     notify_on_cmd_finish invisible 10.0
+#:     # Ring a bell when a command takes more than 10 seconds in a invisible window
+#:     notify_on_cmd_finish invisible 10.0 bell
+#:     # Run 'notify-send' when a command takes more than 10 seconds in a invisible window
+#:     notify_on_cmd_finish invisible 10.0 command notify-send job finished
+
 # term xterm-kitty
 
 #: The value of the TERM environment variable to set. Changing this
@@ -1573,7 +1632,7 @@ update_check_interval 0
 
 #: This will create a menu entry named "Launch something special" in
 #: an "Actions" menu in the macOS global menubar. Sub-menus can be
-#: created by adding more levels separated by ::.
+#: created by adding more levels separated by the :: characters.
 
 #: {{ "}}}" }}
 
@@ -1700,63 +1759,21 @@ wayland_titlebar_color background
 #: present at Functional key definitions
 #: <https://sw.kovidgoyal.net/kitty/keyboard-protocol/#functional>.
 #: For modifier keys, the names are ctrl (control, ⌃), shift (⇧), alt
-#: (opt, option, ⌥), super (cmd, command, ⌘). See also: GLFW mods
-#: <https://www.glfw.org/docs/latest/group__mods.html>
+#: (opt, option, ⌥), super (cmd, command, ⌘).
 
-#: On Linux you can also use XKB key names to bind keys that are not
-#: supported by GLFW. See XKB keys
-#: <https://github.com/xkbcommon/libxkbcommon/blob/master/include/xkbcommon/xkbcommon-
-#: keysyms.h> for a list of key names. The name to use is the part
-#: after the XKB_KEY_ prefix. Note that you can only use an XKB key
-#: name for keys that are not known as GLFW keys.
+#: Simple shortcut mapping is done with the map directive. For full
+#: details on advanced mapping including modal and per application
+#: maps, see mapping <https://sw.kovidgoyal.net/kitty/mapping/>. Some
+#: quick examples to illustrate common tasks::
 
-#: Finally, you can use raw system key codes to map keys, again only
-#: for keys that are not known as GLFW keys. To see the system key
-#: code for a key, start kitty with the kitty --debug-input option,
-#: kitty will output some debug text for every key event. In that text
-#: look for native_code, the value of that becomes the key name in the
-#: shortcut. For example:
-
-#: .. code-block:: none
-
-#:     on_key_input: glfw key: 0x61 native_code: 0x61 action: PRESS mods: none text: 'a'
-
-#: Here, the key name for the A key is 0x61 and you can use it with::
-
-#:     map ctrl+0x61 something
-
-#: to map Ctrl+A to something.
-
-#: You can use the special action no_op to unmap a keyboard shortcut
-#: that is assigned in the default configuration::
-
-#:     map kitty_mod+space no_op
-
-#: If you would like kitty to completely ignore a key event, not even
-#: sending it to the program running in the terminal, map it to
-#: discard_event::
-
-#:     map kitty_mod+f1 discard_event
-
-#: You can combine multiple actions to be triggered by a single
-#: shortcut with combine action, using the syntax below::
-
-#:     map key combine <separator> action1 <separator> action2 <separator> action3 ...
-
-#: For example::
-
+#:     # unmap a keyboard shortcut, passing it to the program running in kitty
+#:     map kitty_mod+space
+#:     # completely ignore a keyboard event
+#:     map ctrl+alt+f1 discard_event
+#:     # combine multiple actions
 #:     map kitty_mod+e combine : new_window : next_layout
-
-#: This will create a new window and switch to the next available
-#: layout.
-
-#: You can use multi-key shortcuts with the syntax shown below::
-
-#:     map key1>key2>key3 action
-
-#: For example::
-
-#:     map ctrl+f>2 set_font_size 20
+#:     # multi-key shortcuts
+#:     map ctrl+x>ctrl+y>z action
 
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
@@ -2252,7 +2269,7 @@ map shift+f1 new_tab_with_cwd
 # map kitty_mod+p>n kitten hints --type linenum
 
 #::  Select something that looks like filename:linenum and open it in
-#::  vim at the specified line number.
+#::  your default editor at the specified line number.
 
 #: Open the selected hyperlink
 
@@ -2335,8 +2352,10 @@ map shift+f1 new_tab_with_cwd
 #::      map f1 clear_terminal scrollback active
 #::      # Scroll the contents of the screen into the scrollback
 #::      map f1 clear_terminal scroll active
-#::      # Clear everything up to the line with the cursor
+#::      # Clear everything up to the line with the cursor or the start of the current prompt (needs shell integration)
 #::      map f1 clear_terminal to_cursor active
+#::      # Same as above except cleared lines are moved into scrollback
+#::      map f1 clear_terminal to_cursor_scroll active
 
 #::  If you want to operate on all kitty windows instead of just the
 #::  current one, use all instead of active.
@@ -2372,6 +2391,11 @@ map shift+f1 new_tab_with_cwd
 #::      }
 #::      zle -N ctrl_l
 #::      bindkey '^l' ctrl_l
+
+#::  Alternatively, you can just add map ctrl+l clear_terminal
+#::  to_cursor_scroll active to kitty.conf which works with no changes
+#::  to the shell rc files, but only clears up to the prompt, it does
+#::  not clear anytext at the prompt itself.
 
 #: Clear up to cursor line
 
