--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -26,7 +26,7 @@ font_family      Fira Code
 
 font_size {{ .kitty.font_size }}
 
-#: Font size (in pts)
+#: Font size (in pts).
 
 # force_ltr no
 
