--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -316,6 +316,14 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 #: is changed it will only affect newly created windows, not existing
 #: ones.
 
+# scrollback_indicator_opacity 1.0
+
+#: The opacity of the scrollback indicator which is a small colored
+#: rectangle that moves along the right hand side of the window as you
+#: scroll, indicating what fraction you have scrolled. The default is
+#: one which means fully opaque, aka visible. Set to a value between
+#: zero and one to make the indicator less visible.
+
 # scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
 #: Program with which to view scrollback in a new window. The
@@ -856,7 +864,9 @@ enable_audio_bell no
 #: the sides. You can control how that padding is distributed with
 #: this option. Using a value of center means the cell area will be
 #: placed centrally. A value of top-left means the padding will be
-#: only at the bottom and right edges.
+#: only at the bottom and right edges. The value can be one of: top-
+#: left, top, top-right, left, center, right, bottom-left, bottom,
+#: bottom-right.
 
 # active_border_color #00ff00
 
@@ -1079,6 +1089,8 @@ tab_bar_style powerline
 #:     active_oldest_exe for the oldest foreground process.
 #: max_title_length
 #:     The maximum title length available.
+#: keyboard_mode
+#:     The name of the current keyboard mode <https://sw.kovidgoyal.net/kitty/mapping/#modal-mappings> or the empty string if no keyboard mode is active.
 
 #: Note that formatting is done by Python's string formatting
 #: machinery, so you can use, for instance, {layout_name[:2].upper()}
@@ -1161,7 +1173,7 @@ tab_bar_style powerline
 #: and/or rendering artifacts. Usually, values up to 64 work well.
 #: Note that this might cause performance issues, depending on how the
 #: platform implements it, so use with care. Currently supported on
-#: macOS and KDE under X11.
+#: macOS and KDE.
 
 # background_image none
 
@@ -1598,7 +1610,8 @@ update_check_interval 0
 #:     # Ring a bell when a command takes more than 10 seconds in a invisible window
 #:     notify_on_cmd_finish invisible 10.0 bell
 #:     # Run 'notify-send' when a command takes more than 10 seconds in a invisible window
-#:     notify_on_cmd_finish invisible 10.0 command notify-send job finished
+#:     # Here %c is replaced by the current command line and %s by the job exit code
+#:     notify_on_cmd_finish invisible 10.0 command notify-send "job finished with status: %s" %c
 
 # term xterm-kitty
 
@@ -1612,6 +1625,17 @@ update_check_interval 0
 #: from key-presses, to colors, to various advanced features may not
 #: work. Changing this option by reloading the config will only affect
 #: newly created windows.
+
+# terminfo_type path
+
+#: The value of the TERMINFO environment variable to set. This
+#: variable is used by programs running in the terminal to search for
+#: terminfo databases. The default value of path causes kitty to set
+#: it to a filesystem location containing the kitty terminfo database.
+#: A value of direct means put the entire database into the env var
+#: directly. This can be useful when connecting to containers, for
+#: example. But, note that not all software supports this. A value of
+#: none means do not touch the variable.
 
 # forward_stdio no
 
@@ -1642,9 +1666,9 @@ wayland_titlebar_color background
 
 #: The color of the kitty window's titlebar on Wayland systems with
 #: client side window decorations such as GNOME. A value of system
-#: means to use the default system color, a value of background means
-#: to use the background color of the currently active window and
-#: finally you can use an arbitrary color, such as #12af59 or red.
+#: means to use the default system colors, a value of background means
+#: to use the background color of the currently active kitty window
+#: and finally you can use an arbitrary color, such as #12af59 or red.
 
 # macos_titlebar_color system
 
@@ -1748,6 +1772,15 @@ wayland_titlebar_color background
 #: backend based on the system state is chosen automatically. Set it
 #: to x11 or wayland to force the choice. Changing this option by
 #: reloading the config is not supported.
+
+# wayland_enable_ime yes
+
+#: Enable Input Method Extension on Wayland. This is typically used
+#: for inputting text in East Asian languages. However, its
+#: implementation in Wayland is often buggy and introduces latency
+#: into the input loop, so disable this if you know you dont need it.
+#: Changing this option by reloading the config is not supported, it
+#: will not have any effect.
 
 #: {{ "}}}" }}
 
@@ -2352,7 +2385,7 @@ map shift+f1 new_tab_with_cwd
 #::      map f1 clear_terminal scrollback active
 #::      # Scroll the contents of the screen into the scrollback
 #::      map f1 clear_terminal scroll active
-#::      # Clear everything up to the line with the cursor or the start of the current prompt (needs shell integration)
+#::      # Clear everything on screen up to the line with the cursor or the start of the current prompt (needs shell integration)
 #::      map f1 clear_terminal to_cursor active
 #::      # Same as above except cleared lines are moved into scrollback
 #::      map f1 clear_terminal to_cursor_scroll active
