--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -282,6 +282,12 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 #: the cursor shape to beam at shell prompts. You can avoid this by
 #: setting shell_integration to no-cursor.
 
+# cursor_shape_unfocused hollow
+
+#: Defines the text cursor shape when the OS window is not focused.
+#: The unfocused cursor shape can be one of block, beam, underline,
+#: hollow.
+
 # cursor_beam_thickness 1.5
 
 #: The thickness of the beam cursor (in pts).
@@ -305,7 +311,7 @@ symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0
 
 #: Scrollback {{ "{{{" }}
 
-# scrollback_lines 2000
+# scrollback_lines 4000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -920,6 +926,19 @@ enable_audio_bell no
 #: The amount the logo should be faded into the background. With zero
 #: being fully faded and one being fully opaque.
 
+# window_logo_scale 0
+
+#: The percentage (0-100] of the window size to which the logo should
+#: scale. Using a single number means the logo is scaled to that
+#: percentage of the shortest window dimension, while preseving aspect
+#: ratio of the logo image.
+
+#: Using two numbers means the width and height of the logo are scaled
+#: to the respective percentage of the window's width and height.
+
+#: Using zero as the percentage disables scaling in that dimension. A
+#: single zero (the default) disables all scaling of the window logo.
+
 # resize_debounce_time 0.1 0.5
 
 #: The time to wait (in seconds) before asking the program running in
@@ -1328,11 +1347,11 @@ editor nvim
 
 close_on_child_death yes
 
-#: Close the window when the child process (shell) exits. With the
-#: default value no, the terminal will remain open when the child
-#: exits as long as there are still processes outputting to the
-#: terminal (for example disowned or backgrounded processes). When
-#: enabled with yes, the window will close as soon as the child
+#: Close the window when the child process (usually the shell) exits.
+#: With the default value no, the terminal will remain open when the
+#: child exits as long as there are still other processes outputting
+#: to the terminal (for example disowned or backgrounded processes).
+#: When enabled with yes, the window will close as soon as the child
 #: process exits. Note that setting it to yes means that any
 #: background processes still using the terminal can fail silently
 #: because their stdout/stderr/stdin no longer work.
@@ -1562,7 +1581,7 @@ update_check_interval 0
 #: This option must be a comma separated list of the above values.
 #: Only the first valid match, in the order specified, is sourced.
 
-# notify_on_cmd_finish never
+notify_on_cmd_finish invisible 30.0
 
 #: Show a desktop notification when a long-running command finishes
 #: (needs shell_integration). The possible values are:
