--- a/dot_config/git/config.tmpl
+++ b/dot_config/git/config.tmpl
@@ -14,6 +14,9 @@
 	side-by-side = true
 	file-modified-label = modified:
 
+[absorb]
+	maxStack = 30
+
 [interactive]
 	diffFilter = delta --color-only
 
