Update .config/kitty/kitty.conf Update .config/nvim/lazy-lock.json

--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -179,7 +179,19 @@ symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200
 #: form (thin|thick)-(sparse|dense). Thin and thick control the
 #: thickness of the undercurl. Sparse and dense control how often the
 #: curl oscillates. With sparse the curl will peak once per character,
-#: with dense twice.
+#: with dense twice. Changing this option dynamically via reloading
+#: the config or remote control is undefined.
+
+# underline_exclusion 1
+
+#: By default kitty renders gaps in underlines when they overlap with
+#: descenders (the parts of letters below the baseline, such as for y,
+#: q, p etc.). This option controls the thickness of the gaps. It can
+#: be either a unitless number in which case it is a fraction of the
+#: underline thickness as specified in the font or it can have a
+#: suffix of px for pixels or pt for points. Set to zero to disable
+#: the gaps. Changing this option dynamically via reloading the config
+#: or remote control is undefined.
 
 # text_composition_strategy platform
 
@@ -505,6 +517,19 @@ scrollback_pager_history_size 100
 #: programs, including websites open in your browser can read the
 #: contents of the system clipboard.
 
+# clear_selection_on_clipboard_loss no
+
+#: When the contents of the clipboard no longer reflect the current
+#: selection, clear it. This is primarily useful on platforms such as
+#: Linux where selecting text automatically copies it to a special
+#: "primary selection" clipboard or if you have copy_on_select set to
+#: clipboard.
+
+#: Note that on macOS the system does not provide notifications when
+#: the clipboard owner is changed, so there, copying to clipboard in a
+#: non-kitty application will not clear selections even if
+#: copy_on_select is enabled.
+
 paste_actions quote-urls-at-prompt
 
 #: A comma separated list of actions to take when pasting text into
@@ -574,9 +599,11 @@ paste_actions quote-urls-at-prompt
 
 #: The default shape of the mouse pointer.
 
-# pointer_shape_when_dragging beam
+# pointer_shape_when_dragging beam crosshair
 
 #: The default shape of the mouse pointer when dragging across text.
+#: The optional second value sets the shape when dragging in
+#: rectangular selection mode.
 
 #: Mouse actions {{ "{{{" }}
 
@@ -1038,7 +1065,9 @@ enable_audio_bell no
 #: quit action). Negative values are converted to positive ones,
 #: however, with shell_integration enabled, using negative values
 #: means windows sitting at a shell prompt are not counted, only
-#: windows where some command is currently running. Note that if you
+#: windows where some command is currently running. You can also have
+#: backgrounded jobs prevent closing, by adding count-background to
+#: the setting, for example: -1 count-background. Note that if you
 #: want confirmation when closing individual windows, you can map the
 #: close_window_with_confirmation action.
 
@@ -1241,8 +1270,14 @@ tab_bar_style powerline
 #: a value less than 1.0 is a (possibly significant) performance hit.
 #: When using a low value for this setting, it is desirable that you
 #: set the background color to a color the matches the general color
-#: of the desktop background, for best text rendering.  If you want to
-#: dynamically change transparency of windows, set
+#: of the desktop background, for best text rendering. Note that to
+#: workaround window managers not doing gamma-corrected blending kitty
+#: makes background_opacity non-linear which means, especially for
+#: light backgrounds you might need to make the value much lower than
+#: you expect to get good results, see 6218
+#: <https://github.com/kovidgoyal/kitty/issues/6218> for details.
+
+#: If you want to dynamically change transparency of windows, set
 #: dynamic_background_opacity to yes (this is off by default as it has
 #: a performance cost). Changing this option when reloading the config
 #: will only work if dynamic_background_opacity was enabled in the
@@ -1708,7 +1743,8 @@ notify_on_cmd_finish invisible 30.0
 #: invisible
 #:     Only send a notification when the window both is unfocused and not visible
 #:     to the user, for example, because it is in an inactive tab or its OS window
-#:     is not currently active.
+#:     is not currently visible (on platforms that support OS window visibility querying
+#:     this considers an OS Window visible iff it is active).
 
 #: always
 #:     Always send a notification, regardless of window state.
@@ -2572,7 +2608,7 @@ map kitty_mod+f2 new_tab_with_cwd
 #::  Alternatively, you can just add map ctrl+l clear_terminal
 #::  to_cursor_scroll active to kitty.conf which works with no changes
 #::  to the shell rc files, but only clears up to the prompt, it does
-#::  not clear anytext at the prompt itself.
+#::  not clear any text at the prompt itself.
 
 #: Clear to start
 
