--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -230,23 +230,38 @@ symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200
 
 # text_fg_override_threshold 0
 
-#: The minimum accepted difference in luminance between the foreground
-#: and background color, below which kitty will override the
-#: foreground color. It is percentage ranging from 0 to 100. If the
-#: difference in luminance of the foreground and background is below
-#: this threshold, the foreground color will be set to white if the
-#: background is dark or black if the background is light. The default
-#: value is 0, which means no overriding is performed. Useful when
-#: working with applications that use colors that do not contrast well
-#: with your preferred color scheme.
+#: A setting to prevent low contrast between foreground and background
+#: colors. Useful when working with applications that use colors that
+#: do not contrast well with your preferred color scheme. The default
+#: value is 0, which means no color overriding is performed. There are
+#: two modes of operation:
+
+#: A value with the suffix ratio represents the minimum accepted
+#: contrast ratio between the foreground and background color.
+#: Possible values range from 0.0 ratio to 21.0 ratio. For example, to
+#: meet WCAG level AA
+#: <https://en.wikipedia.org/wiki/Web_Content_Accessibility_Guidelines>
+#: a value of 4.5 ratio can be provided. The algorithm is implemented
+#: using HSLuv <https://www.hsluv.org/> which enables it to change the
+#: perceived lightness of a color just as much as needed without
+#: really changing its hue and saturation.
+
+#: A value with the suffix % represents the minimum accepted
+#: difference in luminance between the foreground and background
+#: color, below which kitty will override the foreground color. It is
+#: percentage ranging from 0 % to 100 %. If the difference in
+#: luminance of the foreground and background is below this threshold,
+#: the foreground color will be set to white if the background is dark
+#: or black if the background is light.
 
 #: WARNING: Some programs use characters (such as block characters)
 #: for graphics display and may expect to be able to set the
-#: foreground and background to the same color (or similar colors).
-#: If you see unexpected stripes, dots, lines, incorrect color, no
-#: color where you expect color, or any kind of graphic display
-#: problem try setting text_fg_override_threshold to 0 to see if this
-#: is the cause of the problem.
+#: foreground and background to the same color (or similar colors). If
+#: you see unexpected stripes, dots, lines, incorrect color, no color
+#: where you expect color, or any kind of graphic display problem try
+#: setting text_fg_override_threshold to 0 to see if this is the cause
+#: of the problem or consider using the ratio mode of operation
+#: described above instead of the % mode of operation.
 
 #: {{ "}}}" }}
 
@@ -359,7 +374,7 @@ symbol_map U+e000-U+e00a,U+ea60-U+ebeb,U+e0a0-U+e0c8,U+e0ca,U+e0cc-U+e0d7,U+e200
 
 #: Scrollback {{ "{{{" }}
 
-# scrollback_lines 2000
+scrollback_lines 5000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
