--- a/dot_config/kitty/kitty.conf.tmpl
+++ b/dot_config/kitty/kitty.conf.tmpl
@@ -460,6 +460,43 @@ scrollback_pager_history_size 100
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
+#: By default, once the cursor is hidden, it is immediately unhidden
+#: on any further mouse events.
+
+#: Two formats are supported:
+#:  - <hide-wait>
+#:  - <hide-wait> <unhide-wait> <unhide-threshold> <scroll-unhide>
+
+#: To change the unhide behavior, the optional parameters <unhide-
+#: wait>, <unhide-threshold>, and <scroll-unhide> may be set.
+
+#: <unhide-wait>
+#:     Waits for the specified number of seconds after mouse events before unhiding the
+#:     mouse cursor. Set to zero to unhide mouse cursor immediately on mouse activity.
+#:     This is useful to prevent the mouse cursor from unhiding on accidental swipes on
+#:     the trackpad.
+
+#: <unhide-threshold>
+#:     Sets the threshold of mouse activity required to unhide the mouse cursor, when
+#:     the <unhide-wait> option is non-zero. When <unhide-wait> is zero, this has no
+#:     effect.
+
+#:     For example, if <unhide-threshold> is 40 and <unhide-wait> is 2.5, when kitty
+#:     detects a mouse event, it records the number of mouse events in the next 2.5
+#:     seconds, and checks if that exceeds 40 * 2.5 = 100. If it does, then the mouse
+#:     cursor is unhidden, otherwise nothing happens.
+
+#: <scroll-unhide>
+#:     Controls what mouse events may unhide the mouse cursor. If enabled, both scroll
+#:     and movement events may unhide the cursor. If disabled, only mouse movements can
+#:     unhide the cursor.
+
+#: Examples of valid values:
+#:  - 0.0
+#:  - 1.0
+#:  - -1.0
+#:  - 0.1 3.0 40 yes
+
 # url_color #0087bd
 # url_style curly
 
@@ -866,12 +903,18 @@ enable_audio_bell no
 #: Path to a sound file to play as the bell sound. If set to none, the
 #: system default bell sound is used. Must be in a format supported by
 #: the operating systems sound API, such as WAV or OGA on Linux
-#: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound).
+#: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound). Relative
+#: paths are resolved with respect to the kitty config directory.
 
 # linux_bell_theme __custom
 
-#: The XDG Sound Theme kitty will use to play the bell sound. Defaults
-#: to the custom theme name specified in the XDG Sound theme
+#: The XDG Sound Theme kitty will use to play the bell sound. On
+#: Wayland, when the compositor supports it, it is asked to play the
+#: system default bell sound, and this setting has no effect. Note
+#: that Hyprland claims to support this protocol, but does not
+#: actually play a sound
+#: <https://github.com/hyprwm/Hyprland/issues/10488>. This setting
+#: defaults to the custom theme name specified in the XDG Sound theme
 #: specification <https://specifications.freedesktop.org/sound-theme-
 #: spec/latest/sound_lookup.html>, falling back to the default
 #: freedesktop theme if it does not exist. To change your sound theme
@@ -901,6 +944,16 @@ enable_audio_bell no
 #: configured by initial_window_width/height, in pixels. You can use a
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
+
+# remember_window_position no
+
+#: If enabled, the OS Window position will be remembered so that new
+#: instances of kitty will have the same position as the previous
+#: instance. If disabled, the OS Window will be placed by the window
+#: manager. Note that remembering of position only works if the
+#: underlying desktop environment/window manager supports it. It never
+#: works on Wayland. See also kitty --position to specify the position
+#: when launching kitty.
 
 # enabled_layouts *
 
@@ -1310,23 +1363,6 @@ tab_bar_style powerline
 #: platform implements it, so use with care. Currently supported on
 #: macOS and KDE.
 
-# background_image none
-
-#: Path to a background image. Must be in PNG/JPEG/WEBP/TIFF/GIF/BMP
-#: format.
-
-# background_image_layout tiled
-
-#: Whether to tile, scale or clamp the background image. The value can
-#: be one of tiled, mirror-tiled, scaled, clamped, centered or
-#: cscaled. The scaled and cscaled values scale the image to the
-#: window size, with cscaled preserving the image aspect ratio.
-
-# background_image_linear no
-
-#: When background image is scaled, whether linear interpolation
-#: should be used.
-
 # transparent_background_colors
 
 #: A space separated list of upto 7 colors, with opacity. When the
@@ -1353,20 +1389,54 @@ tab_bar_style powerline
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
+# background_image none
+
+#: Path to a background image. Must be in PNG/JPEG/WEBP/TIFF/GIF/BMP
+#: format. Note that when using auto_color_scheme
+#: <https://sw.kovidgoyal.net/kitty/kittens/themes/#auto-color-scheme>
+#: this option is overridden by the color scheme file and must be set
+#: inside it to take effect.
+
+# background_image_layout tiled
+
+#: Whether to tile, scale or clamp the background image. The value can
+#: be one of tiled, mirror-tiled, scaled, clamped, centered or
+#: cscaled. The scaled and cscaled values scale the image to the
+#: window size, with cscaled preserving the image aspect ratio. Note
+#: that when using auto_color_scheme
+#: <https://sw.kovidgoyal.net/kitty/kittens/themes/#auto-color-scheme>
+#: this option is overridden by the color scheme file and must be set
+#: inside it to take effect.
+
+# background_image_linear no
+
+#: When background image is scaled, whether linear interpolation
+#: should be used. Note that when using auto_color_scheme
+#: <https://sw.kovidgoyal.net/kitty/kittens/themes/#auto-color-scheme>
+#: this option is overridden by the color scheme file and must be set
+#: inside it to take effect.
+
 # background_tint 0.0
 
 #: How much to tint the background image by the background color. This
 #: option makes it easier to read the text. Tinting is done using the
 #: current background color for each window. This option applies only
 #: if background_opacity is set and transparent windows are supported
-#: or background_image is set.
+#: or background_image is set. Note that when using auto_color_scheme
+#: <https://sw.kovidgoyal.net/kitty/kittens/themes/#auto-color-scheme>
+#: this option is overridden by the color scheme file and must be set
+#: inside it to take effect.
 
 # background_tint_gaps 1.0
 
 #: How much to tint the background image at the window gaps by the
 #: background color, after applying background_tint. Since this is
 #: multiplicative with background_tint, it can be used to lighten the
-#: tint over the window gaps for a *separated* look.
+#: tint over the window gaps for a *separated* look. Note that when
+#: using auto_color_scheme
+#: <https://sw.kovidgoyal.net/kitty/kittens/themes/#auto-color-scheme>
+#: this option is overridden by the color scheme file and must be set
+#: inside it to take effect.
 
 # dim_opacity 0.4
 
@@ -2356,11 +2426,15 @@ map kitty_mod+ä previous_window
 # map kitty_mod+alt+t set_tab_title
 # map shift+cmd+i     set_tab_title
 
-#: Moves the window into a new tab
+#: Move the window into a new tab
+
 map kitty_mod+f3 detach_window new-tab
 
-#: Asks which tab to move the window into
+#: Ask which tab to move the window into
+
 map kitty_mod+f4 detach_window ask
+
+#: Duplicate session in new window/tab
 
 map kitty_mod+f1 new_window_with_cwd
 map kitty_mod+f2 new_tab_with_cwd
@@ -2442,6 +2516,11 @@ map kitty_mod+f2 new_tab_with_cwd
 #: size::
 
 #:     map kitty_mod+f6 change_font_size current 10.0
+
+#: To setup shortcuts to multiply/divide the font size::
+
+#:     map kitty_mod+f6 change_font_size all *2.0
+#:     map kitty_mod+f6 change_font_size all /2.0
 #: {{ "}}}" }}
 
 #: Select and act on visible text {{ "{{{" }}
